[Fixed] scrollbars issues

--- a/src/layout/MainLayout/MainLayout.scss
+++ b/src/layout/MainLayout/MainLayout.scss
@@ -35,7 +35,7 @@
         percentage(calc(random(100) / 100)) percentage(calc(random(100) / 100)), percentage(calc(random(100) / 100)) percentage(calc(random(100) / 100));
     background-repeat: no-repeat no-repeat;
     white-space: pre-line;
-
+    overflow: hidden;
     .spinner-border {
         width: '3rem';
         height: '3rem';
